Fixed z-index searchbar

--- a/styles/indexSearch.css
+++ b/styles/indexSearch.css
@@ -1,5 +1,5 @@
 #indexSearch {
-    z-index: 0;
+    z-index: -1;
 }
 
 /* The index.html schoolList css */
